fix bugs detected by static analyzers